examples/test/testpolicy18294.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18294
  namespace: namespace460
spec:
  podSelector:
    matchLabels:
      key7: value20
      key33: value7
      key39: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value46
          key28: value45
          key1: value1
      podSelector:
        matchLabels:
          key26: value4
